fixed minor layout bugs

--- a/signaturenDruck/css/print.css
+++ b/signaturenDruck/css/print.css
@@ -1,3 +1,10 @@
+.innerBox {
+  width: 100%;
+}
+.innerBox > p {
+  width: 100%;
+}
+
 @media print {
   #toPrint > #coverLabel.innerBox {
     margin-top: -2mm;
